--- a/docs/phase4/relatorio.tex
+++ b/docs/phase4/relatorio.tex
@@ -125,11 +125,11 @@ framesep=2mm
         \item \textit{Generator}
         \begin{enumerate}
             \item Gerar as normais para cada vértice das figuras geométricas. (\ref{subsec:normals})
-            \item Gerar as coordenadas de textura para cada figura geométrica.
+            \item Gerar as coordenadas de textura para cada figura geométrica. (\ref{subsec:texCoord})
             \item Atualização do ficheiro \textit{.3D}, com as \textit{tags} 
-                  \textit{normals} e \textit{texture}.
+                  \textit{normals} e \textit{texture}.(\ref{subsec:writer})
             \begin{enumerate}
-                \item[\textit{ADICIONAL}]{Criação de um círculo de asteróides.}
+                \item[\textit{ADICIONAL}]{Criação de um círculo de asteróides.} (\ref{subsec:aster})
             \end{enumerate}
         \end{enumerate}
         \item \textit{Engine}
@@ -146,7 +146,7 @@ framesep=2mm
         \end{enumerate}
         \item Sistema Solar 
         \begin{enumerate}
-            \item Transição para um modelo iluminado e texturizado.(\ref{subsec:sistema_solar})
+            \item Transição para um modelo iluminado e texturizado.
         \end{enumerate}
     \end{enumerate}
     
