--- a/docs/phase4/generator.tex
+++ b/docs/phase4/generator.tex
@@ -75,10 +75,33 @@ Deste modo, apresenta:
 \end{eqnarray}
 
 \subsubsection{\textit{Sphere}}
+O cálculo das normais na esfera é feito com base na seguinte proprieada
+geométrica:
+Se p é um vértice da esfera:
+$ p = (raio * sin(\alpha) * cos(\beta), sin(\beta), raio * cos(\alpha) * cos(\beta))$
+e como a esfera está centrada no ponto (0, 0, 0), o vetor normal é obtido através
+da normalização do vetor n, que é igual a p - (0, 0, 0).
 
 \subsubsection{\textit{Cone}}
+O cálculo das normais do cone foram feitas com 2 abordagens diferentes,
+para a base, uma vez que esta é desenhado sobre o plano XZ, consequentemente
+a normal será a apontar para o Y negativo, isto é (0, -1, 0).
+
+Para a lateral do cone, a normal foi obtida a partir do produto cartesiano
+de um vetor tangente à face lateral do cone com 
 
 \subsubsection{\textit{Cylinder}}
+O cilindro é composto por 2 bases, sendo o a normal da base inferior o inverso
+da normal da base superior. Como este é construído sobre o XZ, a normal da base superior
+é (0, 1, 0) e da base inferior (0, -1, 0).
+
+Para calcular as normais do parte lateral do cone, foi utilizada a seguinte propriedade
+geométrica:
+
+Se p é um vértica da face lateral do cilindro:
+$ p = (raio * sin(\alpha), y, raio * cos(\alpha))$
+então:
+$ n = (sin(\alpha), 0, cos(\alpha))$
 
 % \subsubsection{\textit{Torus}}
 
@@ -132,8 +155,28 @@ diretamente do \textbf{plano}.
 \subsubsection{\textit{Sphere}}
 
 \subsubsection{\textit{Cone}}
+Para coordenadas de textura da base do cone, o centro da base
+corresponde ao centro da textura(0.5, 0.5) e cada slice corresponde
+a um slice também na textura com o mesmo ângulo $\alpha$ mas com um raio
+de 0.5.
+
+Para a parte lateral foram criados 2 \textit{steps}:
+\begin{itemize}
+    \item $xStep = 1.0 / slices$
+    \item $yStep = 1.0 / stacks$
+\end{itemize}
+
+A construção do cone é feita com base num ciclo que itera o número de \textit{stacks}
+vezes em que o yStep começa a 0 e incremete yStep a cada iteração. Em que cada iteração d
+este ciclo é percorrido outro ciclo com número de \textit{slices} iterações, eu que o xStep começa
+a 0 e incrementa xStep a cada iteração. Com estas duas variavéis é facilmente obtido as coordenas de textura
+de cada ponto.
+
 
 \subsubsection{\textit{Cylinder}}
+A estratégia utilizada no cilindro foi a mesma que no cone, sendo
+as texturas das duas bases do cilindro obtidas da mesma forma que
+a base do cone e o mesmo para as coordenadass de texturas da face lateral.
 
 % \subsubsection{\textit{Torus}}
 
@@ -182,9 +225,17 @@ A função que criava este modelo, conjunto de figuras:
 \end{minted}
 \dots sendo cada asteróide uma esfera.
 
-Seria necessário indicar a \textbf{distância mínima e máxima} 
-para os desenhar, e os valores para construir as esferas 
-e o \textbf{número de asteróides}.
+Seria necessário indicar a :
+\begin{itemize}
+    \item \textbf{distMin}: A distância mínima a um asteroide;
+    \item \textbf{distMax}: A distância máxima a um asteroide;
+    \item \textbf{maxSize}: O raio máximo do asteroide;
+    \item \textbf{slices}: O número de slices da esfera;
+    \item \textbf{stacks}: O número de stacks da esfera;
+    \item \textbf{alphaMax}: O valor máximo do ângulo alpha;
+    \item \textbf{betaMax}: O valor máximo do ângulo beta;
+    \item \textbf{numAsteroids}: O número de asteroides.
+\end{itemize}
 
 Para efetuar deste modo, foi necessário criar uma variação 
 da figura geométrica \textbf{esfera}, a função:
@@ -192,8 +243,8 @@ da figura geométrica \textbf{esfera}, a função:
 \begin{minted}{cpp}
     std::tuple<t_points, t_points, std::vector<float>> create_sphere(int radius, int slices, int stacks, Point offset)
 \end{minted}
-\dots sendo adicionado um \textit{offset}, para 
-posicionar as esferas relativamente às adjacentes,
+\dots sendo adicionado um \textit{offset} aleatório compreendido
+entre a distância mínima e máxima, para posicionar as esferas,
 com base na variação de um ângulo $\alpha$, horizontal,
 e um ângulo $\beta$, vertical.
 
