--- a/docs/phase4/relatorio.tex
+++ b/docs/phase4/relatorio.tex
@@ -147,12 +147,75 @@ framesep=2mm
         \item Sistema Solar 
         \begin{enumerate}
             \item Transição para um modelo iluminado e texturizado.
+            \item Adição do cinturão de asteroides.
         \end{enumerate}
     \end{enumerate}
     
     \subfile{generator.tex}
     \subfile{engine.tex}
     \subfile{solar_system.tex}
+
+    \subsection{Testes realizados}
+    Para avaliar o desenvolvimento do projeto foram testados os ficheiros de testes disponiblizados
+    pela equipa docente e comparou-se com as imagens com o resultado. As seguintes imagens compararam
+    o modelo desenvolvido pelo grupo(lado esquerdo) com as imagens disponiblizadas.
+
+    \begin{landscape}
+        \begin{figure}
+            \centering
+            \includegraphics[width=\linewidth]{assets/testes/teste_4_1.png}
+            \caption{Resultado do \textit{test_4_1}} \label{fig:teste_4_1}
+        \end{figure}
+    \end{landscape}
+
+    \begin{landscape}
+        \begin{figure}
+            \centering
+            \includegraphics[width=\linewidth]{assets/testes/teste_4_2.png}
+            \caption{Resultado do \textit{test_4_2}} \label{fig:teste_4_2}
+        \end{figure}
+    \end{landscape}
+
+    \begin{landscape}
+        \begin{figure}
+            \centering
+            \includegraphics[width=\linewidth]{assets/testes/teste_4_3.png}
+            \caption{Resultado do \textit{test_4_3}} \label{fig:teste_4_3}
+        \end{figure}
+    \end{landscape}
+
+    \begin{landscape}
+        \begin{figure}
+            \centering
+            \includegraphics[width=\linewidth]{assets/testes/teste_4_4.png}
+            \caption{Resultado do \textit{test_4_4}} \label{fig:teste_4_4}
+        \end{figure}
+    \end{landscape}
+
+    \begin{landscape}
+        \begin{figure}
+            \centering
+            \includegraphics[width=\linewidth]{assets/testes/teste_4_5.png}
+            \caption{Resultado do \textit{test_4_5}} \label{fig:teste_4_5}
+        \end{figure}
+    \end{landscape}
+
+    \begin{landscape}
+        \begin{figure}
+            \centering
+            \includegraphics[width=\linewidth]{assets/testes/teste_4_6.png}
+            \caption{Resultado do \textit{test_4_6}} \label{fig:teste_4_6}
+        \end{figure}
+    \end{landscape}
+
+    \begin{landscape}
+        \begin{figure}
+            \centering
+            \includegraphics[width=\linewidth]{assets/testes/teste_4_7.png}
+            \caption{Resultado do \textit{test_4_7}} \label{fig:teste_4_7}
+        \end{figure}
+    \end{landscape}
+
     \subfile{conclusoes.tex}
 
     \end{document}
