--- a/docs/phase4/relatorio.tex
+++ b/docs/phase4/relatorio.tex
@@ -22,7 +22,7 @@ framesep=2mm
 
 \begin{document}
 %
-\title{Relatório Computação Grafica - Fase 3}
+\title{Relatório Computação Grafica - Fase 4}
 \author{Marco Sousa\inst{1,2}\orcidID{62608} \and
     José Malheiro\inst{1,2}\orcidID{93271} \and
     Miguel Fernandes\inst{1,2}\orcidID{94269}}
@@ -138,7 +138,7 @@ framesep=2mm
             \begin{enumerate}
                 \item num \textit{point}, através da sua posição.
                 \item \textit{directional}, através da direção do foco.
-                \item de um \textit{spotlight}, através da posição, direção 
+                \item de um \textit{spotlight}, através da posição, direção e \textit{cutoff}
             \end{enumerate}
             \item Implementação de texturas, a partir do \textit{path} da imagem a inserir.
             \item Implementação das cores difusa, ambiente, especular, emissiva e o coeficiente
@@ -164,7 +164,7 @@ framesep=2mm
         \begin{figure}
             \centering
             \includegraphics[width=\linewidth]{assets/testes/teste_4_1.png}
-            \caption{Resultado do \textit{test_4_1}} \label{fig:teste_4_1}
+            \caption{Resultado do \textit{test\_4\_1}} \label{fig:teste_4_1}
         \end{figure}
     \end{landscape}
 
@@ -172,7 +172,7 @@ framesep=2mm
         \begin{figure}
             \centering
             \includegraphics[width=\linewidth]{assets/testes/teste_4_2.png}
-            \caption{Resultado do \textit{test_4_2}} \label{fig:teste_4_2}
+            \caption{Resultado do \textit{test\_4\_2}} \label{fig:teste_4_2}
         \end{figure}
     \end{landscape}
 
@@ -180,7 +180,7 @@ framesep=2mm
         \begin{figure}
             \centering
             \includegraphics[width=\linewidth]{assets/testes/teste_4_3.png}
-            \caption{Resultado do \textit{test_4_3}} \label{fig:teste_4_3}
+            \caption{Resultado do \textit{test\_4\_3}} \label{fig:teste_4_3}
         \end{figure}
     \end{landscape}
 
@@ -188,7 +188,7 @@ framesep=2mm
         \begin{figure}
             \centering
             \includegraphics[width=\linewidth]{assets/testes/teste_4_4.png}
-            \caption{Resultado do \textit{test_4_4}} \label{fig:teste_4_4}
+            \caption{Resultado do \textit{test\_4\_4}} \label{fig:teste_4_4}
         \end{figure}
     \end{landscape}
 
@@ -196,7 +196,7 @@ framesep=2mm
         \begin{figure}
             \centering
             \includegraphics[width=\linewidth]{assets/testes/teste_4_5.png}
-            \caption{Resultado do \textit{test_4_5}} \label{fig:teste_4_5}
+            \caption{Resultado do \textit{test\_4\_5}} \label{fig:teste_4_5}
         \end{figure}
     \end{landscape}
 
@@ -204,7 +204,7 @@ framesep=2mm
         \begin{figure}
             \centering
             \includegraphics[width=\linewidth]{assets/testes/teste_4_6.png}
-            \caption{Resultado do \textit{test_4_6}} \label{fig:teste_4_6}
+            \caption{Resultado do \textit{test\_4\_6}} \label{fig:teste_4_6}
         \end{figure}
     \end{landscape}
 
@@ -212,7 +212,7 @@ framesep=2mm
         \begin{figure}
             \centering
             \includegraphics[width=\linewidth]{assets/testes/teste_4_7.png}
-            \caption{Resultado do \textit{test_4_7}} \label{fig:teste_4_7}
+            \caption{Resultado do \textit{test\_4\_7}} \label{fig:teste_4_7}
         \end{figure}
     \end{landscape}
 
