--- a/docs/phase4/solar_system.tex
+++ b/docs/phase4/solar_system.tex
@@ -26,4 +26,20 @@ As componentes da cor foram escolhidas de maneira a aproximar o modelo do sistem
 Tal como referido anteriormente, foi adicionado o cinturão de asteroides que se situa entre Marte e 
 Júpiter. O cinturão possui um movimento de rotação sobre o sol.
 
+\begin{landscape}
+    \begin{figure}
+        \centering
+        \includegraphics[width=\linewidth]{assets/sis_solar1.png}
+        \caption{Sistema solar 1} \label{fig:sistema_solar_1}
+    \end{figure}
+\end{landscape}
+
+\begin{landscape}
+    \begin{figure}
+        \centering
+        \includegraphics[width=\linewidth]{assets/sis_solar2.png}
+        \caption{Sistema solar 2} \label{fig:sistema_solar_2}
+    \end{figure}
+\end{landscape}
+
 \end{document}
